src/components/Navigation/Navigation.scss
nav {
  z-index: 100;
  position: fixed;
  top: 0;
  width: 100%;
  display: flex;
  justify-content: center;
  padding: 8px;
  // height: 2rem;

  &[data-has-scrolled="true"] .inner {
    background: var(--colBackground);
  }

  .inner {
    // max-width: 700px;
    display: flex;
    // align-items: stretch;
    justify-content: space-between;
    gap: 42px;
    flex-wrap: wrap;
    transition: background-color 0.2s ease-in-out;
    padding: 12px 18px;
    border-radius: 1000px;
    font-family: var(--sansSerif);

    a {
      text-decoration: none;
      display: flex;
      align-items: center;
      border-bottom: none;
    }

    span,
    img,
    a {
      user-select: none;
      // color: var(--colTextSecondary);
      // &:hover {
      //   color: var(--colLink);
      // }
      text-transform: capitalize;
    }
  }
  @media screen and (max-width: 480px) {
    padding: 6px;
    .inner {
      width: 100%;
      gap: 0;
    }
  }
}

.nav__icon {
  cursor: pointer;
  background: none;
  border-radius: 0;
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  height: 100%;
  display: flex;
  align-items: center;

  img {
    height: 100%;
    width: auto;
    height: 1rem;
  }
}

.nav__icon img {
  display: none;
}

body[data-theme="dark"] .nav__icon img[data-theme="light"] {
  display: initial;
}

body[data-theme="light"] .nav__icon img[data-theme="dark"] {
  display: initial;
}

@supports (backdrop-filter: blur(10px)) {
  nav {
    &[data-has-scrolled="true"] .inner {
      background: #fffcfb96;

      [data-theme="dark"] & {
        background: hsla(0, 0%, 12%, 0.8);
      }

      backdrop-filter: blur(8px) saturate(130%);
    }
  }
}

